[project]
name = "tarina"
version = "0.3.1"
description = "A collection of common utils for Arclet"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "typing-extensions>=4.4.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "pytest~=7.2.0",
    "coverage~=7.0.1",
    "cython>=0.29.34",
]

[tool.cibuildwheel]
# don't build PyPy wheels, install from source instead
skip = "pp*"