[project]
name = "tarina"
version = "0.5.2"
description = "A collection of common utils for Arclet"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "typing-extensions>=4.4.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
tarina-lang = "tarina.lang.__main__:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "pytest~=7.2.0",
    "coverage~=7.0.1",
    "cython>=3.0.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "fix-future-annotations>=0.5.0",
    "pyyaml>=6.0.1",
]

[tool.cibuildwheel]
# don't build PyPy wheels, install from source instead
skip = "pp*"

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.pdm.scripts]
test = "pytest -v -W ignore"
