[project]
name = "tarina"
version = "0.7.4"
description = "A collection of common utils for Arclet"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "typing-extensions>=4.4.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
yaml = ["pyyaml>=6.0.1"]

[project.scripts]
tarina-lang = "tarina.lang.__main__:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# don't build PyPy wheels, install from source instead
skip = "pp*"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.pdm]
[tool.pdm.scripts]
test = "pytest -v -W ignore"
make = "make"
format = { composite = ["ruff check --select I --fix .","black .","ruff check ."] }

[tool.ruff]
line-length = 120
target-version = "py39"
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q", "I"]
ignore = ["E402", "F403", "F405", "C901", "UP037", "T201"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
extra-standard-library = ["typing_extensions"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "coverage>=7.10.7",
    "cython>=3.1.3",
    "black>=25.11.0",
    "pyyaml>=6.0.1",
    "ruff>=0.15.12",
]
